python-web-server/tests/http/requests/invalid/022.py
from web_server.config import MessageConfig
from web_server.http.errors import InvalidHeader

cfg = MessageConfig.default()
request = InvalidHeader
